sales/k8s/deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sales-deployment
  labels:
    app: sales-deployment
spec:
  replicas: 2
  selector:
    matchLabels:
      app: sales-deployment
  template:
    metadata:
      labels:
        app: sales-deployment
    spec:
      containers:
      - name: sales
        image: sales-sales
        imagePullPolicy: Never
        ports:
        - containerPort: 8081
      imagePullSecrets:
        - name: sales


---
apiVersion: v1
kind: Service
metadata:
  name: sales-service
spec:
  type: LoadBalancer
  ports:
    - name: http
      protocol: TCP
      port: 8081
      targetPort: 8081
  selector:
    app: sales-deployment
