sales/k8s/route.yml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: sales-httproute
spec:
  parentRefs:
    - name: ms-gateway
      sectionName: http
  hostnames:
    - "example.ira.com"
  rules:
    - matches:
        - path:
            type: PathPrefix
            value: /sales
      backendRefs:
        - name: sales-service
          port: 4444
